--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token": "HERE GO YOUR TOKEN, AQUI VA TU TOKEN"
+    "token": "Nzg1MjkzMTY0MTU5MTcyNjE4.X81vQA.q7FmhnQrDiRmWBWqQcK6Vhcay40"
 }
