--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "Nzg1MjkzMTY0MTU5MTcyNjE4.X81vQA.q7FmhnQrDiRmWBWqQcK6Vhcay40"
+    "token": "Nzg5NjMyMDU5NjE0MDM1OTY4.X904KQ.-N0-xJySyYrp_lTOUmcULlLOo04"
 }
 
